--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "prod": "nodemon server.js",
     "build": "NODE_ENV=production webpack -p"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vue": "^2.4.4",
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.1"
+  },
   "devDependencies": {
     "autoprefixer": "^7.1.1",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "compression-webpack-plugin": "^0.4.0",
@@ -26,6 +31,8 @@
     "html-webpack-plugin": "^2.28.0",
     "postcss-loader": "^2.0.5",
     "style-loader": "^0.18.0",
+    "vue-loader": "^13.0.5",
+    "vue-template-compiler": "^2.4.4",
     "webpack": "^2.2.1",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-closure-compiler": "^2.1.4",
